--- a/main.html
+++ b/main.html
@@ -15,9 +15,10 @@
 			<div class="ryu-ready"></div>
 			<div class="ryu-throwing"></div>
 		</div>
-		<div class="hadouken">
-			
-		</div>
+		<div class="hadouken"></div>
 	</div>
+
+	<!-- audio element for Hadouken sound -->
+	<audio id="hadouken-sound" src="sound/hadouken.mp3">
 </body>
 </html>
