finishing StreetFighter project

--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>JQuery StreetFighter</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
@@ -14,8 +14,20 @@
 			<div class="ryu-still"></div>
 			<div class="ryu-ready"></div>
 			<div class="ryu-throwing"></div>
+			<div class="ryu-cool"></div>
 		</div>
+
 		<div class="hadouken"></div>
+
+		<div class="how-to">
+			<p class="click-on">Click on Ryu to make him throw a Hadouken</p>
+			<p class="press">Press and hold down the "x" key to make him strike his cool pose!</p>
+		</div>
+	</div>
+
+	<div class="signature">
+		<p id="jquery-title">JQuery StreetFighter</p>
+		<p id="name">Christian Bonacore</p>
 	</div>
 
 	<!-- audio element for Hadouken sound -->
